--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,9 @@
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/settings/client">Client</a>
                     </li>
+                    <li nz-menu-item nzMatchRouter>
+                        <a routerLink="dashboard/settings/expense">Expense</a>
+                    </li>
                 </ul>
             </li>
             <li nz-submenu nzTitle="HRM" nzIcon="appstore" nzTheme="outline">
