--- a/src/app/modules/shared/expense/create-expense/create-expense.component.html
+++ b/src/app/modules/shared/expense/create-expense/create-expense.component.html
@@ -1,1 +1,14 @@
-<p>create-expense works!</p>
+<nz-page-header-title>Create Expense</nz-page-header-title>
+<form nz-form [formGroup]="expenseForm" (ngSubmit)="onSubmit()">
+  <nz-form-item>
+    <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="ExpenseName" nzRequired>Expense Name</nz-form-label>
+    <nz-form-control [nzSm]="14" [nzXs]="24">
+      <input nz-input type="text" formControlName="ExpenseName" id="ExpenseName" />
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item nz-row class="register-area">
+    <nz-form-control [nzSpan]="14" [nzOffset]="6">
+      <button nz-button nzType="primary">Save</button>
+    </nz-form-control>
+  </nz-form-item>
+</form>
