--- a/src/app/modules/shared/expense/expense-list/expense-list.component.html
+++ b/src/app/modules/shared/expense/expense-list/expense-list.component.html
@@ -1,1 +1,29 @@
-<p>expense-list works!</p>
+<div class="table-operations">
+    <button nz-button [routerLink]="['create']">Create Expense</button>
+    <button nz-button>Sort age</button>
+    <button nz-button>Clear filters</button>
+    <button nz-button>Clear filters and sorters</button>
+  </div>
+  <nz-table #filterTable nzTableLayout="fixed">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Expense Name</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let data of expenseList;index as i">
+        <td>{{ i + 1 }}</td>
+        <td>{{ data.expenseName }}</td>
+        <td>
+          <nz-button-group>
+            <button nz-button nzType="primary" [routerLink]="['update/', data.expenseId]"><i nz-icon nzType="edit"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary" (click)="deleteExpense(data.expenseId)"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+            <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
+          </nz-button-group>
+        </td>
+      </tr>
+    </tbody>
+  </nz-table>
