--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,9 @@
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/settings/expense">Expense</a>
                     </li>
+                    <li nz-menu-item nzMatchRouter>
+                        <a routerLink="dashboard/hrm/attendance">Attendance</a>
+                    </li>
                 </ul>
             </li>
             <li nz-submenu nzTitle="HRM" nzIcon="appstore" nzTheme="outline">
