--- a/src/app/modules/hrm/attendance/attendance-list/attendance-list.component.html
+++ b/src/app/modules/hrm/attendance/attendance-list/attendance-list.component.html
@@ -1,1 +1,36 @@
-<p>attendance-list works!</p>
+<div class="table-operations">
+    <button nz-button [routerLink]="['create']">Create Attendance</button>
+    <button nz-button>Sort age</button>
+    <button nz-button>Clear filters</button>
+    <button nz-button>Clear filters and sorters</button>
+</div>
+<nz-table #filterTable nzTableLayout="fixed">
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>Time In</th>
+            <th>Time Out</th>
+            <th>Note</th>
+            <th>Employee Id</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let data of _attendanceList; index as i">
+            <td>{{i+1}}</td>
+            <td>{{data.timeIn | date:'d/M/y'}}</td>
+            <td>{{data.timeOut | date:'d/M/y'}}</td>
+            <td>{{data.note}}</td>
+            <td>{{data.employeeId}}</td>
+            <td>
+                <nz-button-group>
+                    <button nz-button nzType="primary" [routerLink]="['update/',data.attendanceId]"><i nz-icon
+                            nzType="edit" nzTheme="outline"></i></button>
+                    <button nz-button nzType="primary"><i nz-icon nzType="delete" nzTheme="outline"
+                            (click)="deleteAttendance(data.attendanceId)"></i></button>
+                    <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
+                </nz-button-group>
+            </td>
+        </tr>
+    </tbody>
+</nz-table>
