--- a/src/app/modules/shared/language/language-list/language-list.component.html
+++ b/src/app/modules/shared/language/language-list/language-list.component.html
@@ -1,1 +1,42 @@
-<p>language-list works!</p>
+<div class="table-operations">
+    <button nz-button [routerLink]="['create']">Create Language</button>
+    <button nz-button>Sort age</button>
+    <button nz-button>Clear filters</button>
+    <button nz-button>Clear filters and sorters</button>
+  </div>
+  <div class="center">
+    <circle-progress *ngIf="showSpinner" [percent]="100" [radius]="100" [outerStrokeWidth]="16" [innerStrokeWidth]="8"
+        [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="10000">
+    </circle-progress>
+  </div>
+  <nz-table #filterTable nzTableLayout="fixed">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>LanguageId</th>
+        <th>LanguageName</th>
+        <th>Description</th>
+        <th>CompanyId</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let data of _languageList; index as i">
+        <td>{{ i+1 }}</td>
+        <td>{{ data.languageId }}</td>
+        <td>{{ data.languageName }}</td>
+        <td>{{ data.description }}</td>
+        <td>{{ data.companyId }}</td>
+        <td>
+          <nz-button-group>
+            <button nz-button nzType="primary" [routerLink]="['update/',data.languageId]"><i nz-icon nzType="edit"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary" (click)="deleteLanguage(data.languageId)"><i nz-icon nzType="delete"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
+          </nz-button-group>
+        </td>
+      </tr>
+    </tbody>
+  </nz-table>
+
